# SOPES1_1S_2025_202202906

./: README.md
Proyecto1/: Manual_Tecnico.md  docker-compose.yml
Proyecto1/container_manager/: Cargo.toml
Proyecto1/container_manager/src/: main.rs
Proyecto1/containers/: run_stress_loop.sh  script.sh
Proyecto1/module/: .Module.symvers.cmd  .modules.order.cmd  .sysinfo_202202906.ko.cmd  .sysinfo_202202906.mod.cmd  .sysinfo_202202906.mod.o.cmd  .sysinfo_202202906.o.cmd  Makefile  sysinfo_202202906.c  sysinfo_202202906.ko  sysinfo_202202906.mod  sysinfo_202202906.mod.c
Proyecto1/python_logs/: main.py  requirements.txt
Proyecto1/python_logs_manager/: dockerfile  main.py  requirements.txt
Proyecto1/python_logs_manager/logs/: logs.json
Proyecto2/: Manual_Tecnico.md  README.md
Proyecto2/Go Deployments/: docker-compose.yml  go.mod  go.sum  readme.md
Proyecto2/Go Deployments/client/: dockerfile  main.go
Proyecto2/Go Deployments/proto/: ejemplo.proto  writer.pb.go  writer.proto  writer_grpc.pb.go
Proyecto2/Go Deployments/writer_kafka/: main.go
Proyecto2/api_rest/: Cargo.toml  dockerfile
Proyecto2/api_rest/src/: main.rs
Proyecto2/cluster/: goclient.yaml  grafana-values.yaml  grafana.yaml  ingress-nginx-values.yaml  ingress.yaml  rabbit-writer.yaml  redis.yaml  rust-api.yaml  valkey.yaml
Proyecto2/cluster/kafka/: kafka-cluster.yaml  kafka-consumer.yaml  kafka-topic.yaml  kafka-writer.yaml
Proyecto2/cluster/rabbit/: rabbit-cluster.yaml  rabbit-consumer.yaml  rabbit-writer.yaml  readme.md
Proyecto2/locust/: locustfile.py
(+11 files in other folders)
